# linear-claude-orchestrator

./: .gitignore  README.md  SKILL.md  dispatcher.py  post_result.py  pyproject.toml
.github/workflows/: test.yml
configs/: execution_policy.yaml  project.yaml  repository_profile.yaml
docs/: architecture.md
examples/: runtime_state.yaml  self_test_task.yaml  task_contract.yaml
src/damon_autocoding/: cli.py  config.py  gitlab.py  models.py  orchestrator.py  planner.py  project.py  repo_profile.py  runs.py  sidecar.py  summarizer.py  task_runner.py  workers.py  workspace.py
tests/: test_cli.py  test_gitlab_delivery.py  test_orchestrator.py  test_planner.py  test_runs.py  test_sidecar.py  test_task_runner.py  test_workspace.py
