[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "damon-autocoding"
version = "0.1.0"
description = "Control plane skeleton for autonomous Codex-driven development."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
]

[project.scripts]
damon-autocoding = "damon_autocoding.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
