[project]
name = "linear-claude-orchestrator"
version = "1.0.0"
description = "Automatic Linear issue dispatcher for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Leon Li" }]
urls = { Homepage = "https://github.com/big-lilijiang/linear-claude-orchestrator" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
